--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1701,107 +1701,107 @@ stories:
   domain: http://www.sidneyherald.com/
   link: https://www.sidneyherald.com/national/entertainment/taylor-swift-hired-bodyguard-on-cats-set-due-to-stalker/article_e5b51efe-e593-5487-a875-7291950c70b1.html
 images:
-- name: fence-fence-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purp-paper.jpg
-- name: sand-hand-sand-hand-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-post-modern.jpg
-- name: old-granary-field-oldhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-clean-view.jpg
-- name: legal-statue-legalstatue-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-two.jpg
-- name: white-house-lawn-white-house-window-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-ww2-color.jpg
-- name: copper-circuit-desert-road-mountains.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-desert-road-mountains.jpg
-- name: capital-battle-capitolbattle-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-asteroids.jpg
-- name: locked-up-steam-lock-up-steam-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-bright-sand.jpg
-- name: yosemite-yosemite-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-rain.jpg
-- name: old-door-lock-old-door-lock-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor.jpg
-- name: braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
-- name: white-house-lawn-white-house-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-aqua.jpg
-- name: crow_colorful_dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
-- name: oldtrain-oldtrain-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kandinsky-bv.jpg
-- name: windowmountain-window-mountain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smooth-ride.jpg
-- name: adam-smith-adam-smith-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crunch-paper.jpg
-- name: christianity-christianity-under-construction-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-hot-spicy.jpg
-- name: ellis-island-ellis-island-room-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-aqua.jpg
-- name: miamibeach-miamibeach-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-kand-two.jpg
-- name: stalin-time-cannon_36556797762_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cannon_36556797762_o.jpg
-- name: adam-smith-adam-smith-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
-- name: old-granary-field-oldhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
-- name: old-barn-old-barn-1500-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-green-zuma.jpg
-- name: stalin-time-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-gypsy-house-with-pen.jpg
-- name: cargo-ship-cargo-ship-on-sea-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sunday.jpg
-- name: capital-battle-capitolbattle-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-blocks.jpg
-- name: status-berlin-status-berlin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-missle.jpg
-- name: catacombs-catacombs-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-two.jpg
-- name: nazi-invasion-P6210065.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6210065.jpg
-- name: razorcliff-razorcliff-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colored-circuits.jpg
-- name: oldhouse-granaryfield-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-crunch-paper.jpg
-- name: dragon-desert-desert-dragon-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit-2.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
-- name: bordercrossing-bordercrossing-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alberto-giacometti.jpg
-- name: walled-garden-walled-garden-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
-- name: aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
-- name: white-house-lawn-white-house-window-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-attack-planes.jpg
-- name: old-cabin-oldcabin-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colored-circuits.jpg
-- name: oldtrain-oldtrain-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-umberto-bocc.jpg
-- name: crow-crow-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
-- name: bf-skinner-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-tracks-bending.jpg
-- name: supreme-court-supremecourt-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purp-paper.jpg
-- name: nazi-invasion-train-car_35892468014_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-car_35892468014_o.jpg
-- name: oldcabin-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sunday.jpg
-- name: dragon-desert-desert-dragon-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-internet-numbers.jpg
-- name: abandonedbuildings_dark_pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_pigeon.jpg
+- name: oldroad-old-road-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-circuit.jpg
+- name: old-door-lock-old-door-lock-2-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-really-hot.jpg
+- name: oldhotel-oldhotel-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
+- name: dragon-desert-desert-dragon-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-propaganda-leaflets.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
+- name: stalin-time-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-google-front-of-business.jpg
+- name: adam-smith-adam-smith-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-alien-goggles.jpg
+- name: rockingchair-rockingchair-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colorful-blocks.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+- name: castle-wall-DSC-0067-attack-planes.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-attack-planes.JPG
+- name: nazi-invasion-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-gas-station_35891228584_o.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gan-vogh.jpg
+- name: oldhouse-oldhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-green-zuma.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: power-lines-power-lines-empty-space-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-monet-one.jpg
+- name: gears-4882162452-fa3126b38d-b-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kand-two.jpg
+- name: border-fence-border-fence-on-hill-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
+- name: wind-mills-windmills-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-atari-asteroids.jpg
+- name: aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
+- name: stalin-time-san-francisco-lights-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-lights-skyline.jpg
+- name: razorcliff-razorcliff-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-kand-two.jpg
+- name: lincoln-memorial-lincolnmemorial-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dark-dali.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
+- name: store-on-corner-oldcabin-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-brush.jpg
+- name: stalin-time-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-building-shadows-sun.jpg
+- name: oldhotel-oldhotel-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-asteroids.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-attack-planes.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-brush.jpg
+- name: beach-rocks-beach-rocks-currents-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-china-prop.jpg
 - name: mosaic-face-mosaic-face-crabapple.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crabapple.jpg
-- name: oldhouse-oldhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-deep-connections.jpg
-- name: meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
+- name: eduardo-eduardo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
+- name: udnie-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7559.jpg
+- name: berlinwall2-berlinwall-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gan-vogh.jpg
+- name: oldroad-old-road-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-asteroids.jpg
+- name: old-barn-old-barn-1500-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
+- name: old-school-house-old-schoolhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-dali.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
+- name: downtheline-downtheline-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-plentiful.jpg
+- name: locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
+- name: capital-battle-capitolbattle-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-missle.jpg
+- name: store-on-corner-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-missle.jpg
+- name: machine-road-machine-road-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-smoking-cigarette.jpg
+- name: old-house-oldhouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-constitution.jpg
+- name: cyber-api-description-wars-cannon-wall-satan.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-cannon-wall-satan.jpg
+- name: dragon-desert-desert-dragon-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-constitution.jpg
+- name: berlinwall-DSC-0084-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-far-away.jpg
+- name: aws-s3-goldsilverfalls-goldsilverfalls-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-goldsilverfalls-goldsilverfalls-still.jpg
 ---
 Waterloo Community Foundation Announces Grant Awards.&nbsp;Filing Deadline Was Wednesday.&nbsp;Veterans Group Could Take Over Former Senior Center.&nbsp;Rumford Residents Paying It Forward At Christmas.&nbsp;Democratic Candidate Says Trump Is A Fake On The Economy.&nbsp;Governor Remains Noncommittal On Tonto Creek Bridge.&nbsp;We Love The Daily Grind.&nbsp;French Telecom Company Orange Convicted Over Suicides.&nbsp;
